# pooltv

./: README.md
buildroot-external-tree/: Config.in  external.desc  external.mk
buildroot-external-tree/configs/: pooltv_defconfig
buildroot-external-tree/overlay/etc/modules-load.d/: camera.conf
buildroot-external-tree/overlay/etc/systemd/system/multi-user.target.wants/: sender.service
buildroot-external-tree/overlay/usr/lib/systemd/system/: sender.service
buildroot-external-tree/package/ptv_fmt/: Config.in  ptv_fmt.hash  ptv_fmt.mk
buildroot-external-tree/package/sender/: Config.in  sender.mk
buildroot-external-tree/scripts/: boot_partition_mods.sh  genimage-raspberrypi.cfg
sender/: CMakeLists.txt  main.cpp
